# routes/games.js
@@ -2,8 +2,6 @@ const express = require('express');
 const router = express.Router();
 const { GamesController } = require('../controllers/games');
 
-const gameController = require('../controllers/games');
-
 router.get('/', (req, res, next) => {
     let controller = new GamesController('games')
     controller.getAllGames(req, res, next)
@@ -20,7 +18,6 @@ router.post('/', (req, res, next) => {
 });
 
 router.put('/:id', (req, res, next) => {
-    console.log("you called me put")
     let controller = new GamesController('games')
     controller.updateSingleGame(req, res, next)
 });
